@@ -504,6 +504,13 @@ static int outer_loop (hashcat_ctx_t *hashcat_ctx)
 
   if (status_ctx->devices_status == STATUS_CRACKED)
   {
+    if (hashes->digests_saved != hashes->digests_done)
+    {
+      const int rc = save_hash (hashcat_ctx);
+
+      if (rc == -1) return -1;
+    }
+
     EVENT (EVENT_POTFILE_ALL_CRACKED);
 
     return 0;
@@ -683,6 +690,13 @@ static int outer_loop (hashcat_ctx_t *hashcat_ctx)
 
   if (status_ctx->devices_status == STATUS_CRACKED)
   {
+    if (hashes->digests_saved != hashes->digests_done)
+    {
+      const int rc = save_hash (hashcat_ctx);
+
+      if (rc == -1) return -1;
+    }
+
     EVENT (EVENT_WEAK_HASH_ALL_CRACKED);
 
     return 0;
